--- a/Panos-Scott/package.json
+++ b/Panos-Scott/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.1",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "pg": "^7.4.1"
   }
 }
